@@ -1,5 +1,6 @@
 master
 - mayhem
+  hide original posts from inlined backlinks - optional
   enable autoposting when submitting a captcha while on cooldown
   fix caret position when quoting on Opera
 
